      in a caravanserai (requires building 2/20 wood or stone to construct).
      The number of quartermasters is limited by the number of trade points.
      Use of distribute and transport counts as a trade use in the hex as
      well.  There are options to allow the level of Quartermaster skill
      to affect the non-local transport distance or the cost of shipping
      items non-locally.
   -- Fixed bug in tax being a month-long order and issuing the 'tax'
      command giving an error about work overwriting and then the unit
      working instead of taxing.
   -- Fixed bug where autotax didn't work if DEFAULT_WORK_ORDER was
      disabled and the unit was submitted as part of an orderset but had
      blank orders (only when TAX_PILLAGE_MONTHLONG was set).
   -- Fixed a bug where withdraw didn't give item info on items which the
      faction hadn't already seen the item info.
   -- GROW_RACES option to disperse races across an area at world creation
      rather than set them up hex-by-hex. This is tuneable by adjusting the
      gamedef value.
   -- PLAYER_ECONOMY: very basic ruleset for the player-run economy are in
      place.  Enabling this means that population grows or dies according to
      given space (habitat) and other factors and that the economy is
      determined by a region's development parameter. Recruitment reduces
      the population while give 0 orders increase it (no check for races
      yet). This is not yet reflected in the rules.
   -- Started work on getting rid of the hardcoded enums.  Battle Items,
      Weapons, Armors, Mounts and Men are now done, as are Effects, Specials,
      and Ranges.  They are now completely looked up based on a unique text
	  key to find the one desired.
   -- Fixed a small goof in the grow races code (a race (I_VIKING for example)
      was being used as an index into the ManDefs array.  This worked fine for
      the 'base' races, but would have failed on any of the extended ones.
